<resources>
    <string name="app_name">Awais2075</string>
    <!-- <string name="button_googleSignIn">Connect with Google</string>
    <string name="edit_userEmail">User Email</string>
    <string name="edit_userPassword">User Password</string>
   --> <!--<string name="button_emailSignIn">Sign In</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>-->

    <!--
    &lt;!&ndash;activity_login.xml&ndash;&gt;
    <string name="edit_or...">Or</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>-->


    <!--Action Settings-->

    <string name="action_autoResponse">Set Auto Response</string>
    <string name="action_silent">Turn on Silent Killer</string>
    <string name="action_search">Search</string>
    <string name="action_logout">LogOut</string>


    <!--activity_login.xml-->
    <string name="button_googleSignIn">CONNECT WITH GOOGLE</string>
    <string name="button_facebookSignIn">CONNECT WITH FACEBOOK</string>
    <string name="text_or...">Or</string>
    <string name="edit_userEmail">Username or Email</string>
    <string name="edit_userPassword">Password</string>
    <string name="button_signIn">SIGN IN</string>
    <string name="button_forgotPassword">Forgot Password ???</string>
    <string name="button_register">Register</string>

    <!--activity_register.xml-->
    <string name="text_register...">Register Yourself</string>
    <string name="edit_registerEmail">Email Address</string>
    <string name="edit_registerPassword">Password</string>
    <string name="edit_registerConfirmPassword">Confirm Password</string>
    <string name="button_alreadyHaveAccount">Already have account?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_conversation">Conversations</string>
    <string name="content">Are you sure to perform this action</string>
    <string name="loading_content">Loading...</string>
    <string name="agree">Yes</string>
    <string name="disagree">No</string>
    <string name="silent_killer_content">Enter the evacuation code</string>
    <string name="submit">SUBMIT</string>
    <string name="silent_promt">Turn on Silent Killer???</string>
    <string name="empty_string" />
    <string name="evacuation_code_string">%1$s</string>
    <string name="showPassword">Show Password</string>
    <string name="content_create_group">Enter the Category Name</string>
    <string name="input_hint">Friends</string>
    <string name="input_content_custominvalidation">Group already exists</string>


</resources>
