<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.androidhive.settings.MainActivity">

    <item
        android:id="@+id/action_silent"
        android:checked="false"
        android:orderInCategory="100"
        android:title="@string/action_silent"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_auto_response"
        android:orderInCategory="100"
        android:title="@string/action_autoResponse"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>